crates/ars-components/src/input/checkbox/snapshots/ars_components__input__checkbox__tests__checkbox_control_disabled_readonly_invalid.snap
---
source: crates/ars-components/src/input/checkbox/mod.rs
expression: "snapshot_attrs(&service.connect(&|_| {}).control_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "control",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "checkbox",
            ),
        ),
        (
            Aria(
                Checked,
            ),
            String(
                "false",
            ),
        ),
        (
            Aria(
                Disabled,
            ),
            String(
                "true",
            ),
        ),
        (
            Aria(
                ErrorMessage,
            ),
            String(
                "terms-error-message",
            ),
        ),
        (
            Aria(
                Invalid,
            ),
            String(
                "true",
            ),
        ),
        (
            Aria(
                LabelledBy,
            ),
            String(
                "terms-label",
            ),
        ),
        (
            Aria(
                ReadOnly,
            ),
            String(
                "true",
            ),
        ),
        (
            Aria(
                DescribedBy,
            ),
            String(
                "terms-error-message",
            ),
        ),
        (
            Id,
            String(
                "terms-control",
            ),
        ),
        (
            Role,
            String(
                "checkbox",
            ),
        ),
        (
            TabIndex,
            String(
                "0",
            ),
        ),
    ],
    styles: [],
}
