crates/ars-components/src/input/checkbox/snapshots/ars_components__input__checkbox__tests__checkbox_control_indeterminate.snap
---
source: crates/ars-components/src/input/checkbox/mod.rs
expression: "snapshot_attrs(&service.connect(&|_| {}).control_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "control",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "checkbox",
            ),
        ),
        (
            Aria(
                Checked,
            ),
            String(
                "mixed",
            ),
        ),
        (
            Aria(
                LabelledBy,
            ),
            String(
                "terms-label",
            ),
        ),
        (
            Id,
            String(
                "terms-control",
            ),
        ),
        (
            Role,
            String(
                "checkbox",
            ),
        ),
        (
            TabIndex,
            String(
                "0",
            ),
        ),
    ],
    styles: [],
}
