crates/ars-components/src/input/checkbox/snapshots/ars_components__input__checkbox__tests__checkbox_description_default.snap
---
source: crates/ars-components/src/input/checkbox/mod.rs
expression: "snapshot_attrs(&service.connect(&|_| {}).description_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "description",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "checkbox",
            ),
        ),
        (
            Id,
            String(
                "terms-description",
            ),
        ),
    ],
    styles: [],
}
