crates/ars-components/src/input/checkbox/snapshots/ars_components__input__checkbox__tests__checkbox_hidden_input_checked.snap
---
source: crates/ars-components/src/input/checkbox/mod.rs
expression: "snapshot_attrs(&service.connect(&|_| {}).hidden_input_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "hidden-input",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "checkbox",
            ),
        ),
        (
            Aria(
                Hidden,
            ),
            String(
                "true",
            ),
        ),
        (
            Class,
            String(
                "ars-sr-input",
            ),
        ),
        (
            Id,
            String(
                "terms-hidden-input",
            ),
        ),
        (
            TabIndex,
            String(
                "-1",
            ),
        ),
        (
            Checked,
            Bool(
                true,
            ),
        ),
        (
            Form,
            String(
                "signup",
            ),
        ),
        (
            Name,
            String(
                "accept_terms",
            ),
        ),
        (
            Type,
            String(
                "checkbox",
            ),
        ),
        (
            Value,
            String(
                "yes",
            ),
        ),
    ],
    styles: [],
}
